# applied-probability-framework-me

./: .dockerignore  .editorconfig  .git_commit_message.txt  .gitignore  .pre-commit-config.yaml  AI_VISUALIZATION_README.md  APP_README.md  COMMIT_INSTRUCTIONS.md  CONTRIBUTING.md  DASHBOARD_README.md  Dockerfile  ENABLE_Q_LEARNING.md  EVALUATION_FOLLOWUP.md  EXE_BUILD_COMPLETE.md  GITHUB_RELEASE_INSTRUCTIONS.md  GITHUB_SUMMARY.md  GIT_SETUP_INSTRUCTIONS.md  HOW_TO_USE_THE_EXECUTABLES.md  LICENSE  MANIFEST.in  ORGANIZATION_PLAN.md  PAPER_TRADING_CHECKLIST.md  PROJECT_STRUCTURE.md  PYPI_RELEASE.md  QUICKSTART.md  QUICK_START_STOCK_AI.md  README.md  README_EXE_BUILD.txt  README_PROFESSIONAL.md  README_TRAINING.md  README_UNIFIED.md  README_stock_ai.md  REPO_CLEANUP_COMPLETE.md  RESTRUCTURING_COMPLETE.md  REVIEWER_RESPONSE.md  SETUP_COMPLETE.md  TRAINING_COMPLETE.md  ai_memory.json  applied_probability_framework.spec  build_exe.bat  (+34 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature.yml
.github/workflows/: ci.yml  release.yml
.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  trace
.next/cache/: .tsbuildinfo  config.json
.next/server/: middleware-build-manifest.js  server-reference-manifest.json
.streamlit/: config.toml
app/: globals.css  layout.tsx  page.tsx
app/components/: AIOverview.tsx  ImprovementTracker.tsx  Navigation.tsx  PerformanceMetrics.tsx
app/data/: dataIntegration.ts  mockData.ts
archive/legacy_research/: bayesian_mines.py
backend/python/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/python/python-backend/src/: advanced_probability_estimation.py
backend/python/src/: ab_testing_framework.py  ai_agent_registry.py  ai_agent_tracker.py  ai_api.py  ai_visualization_system.py  anti_detection_simulator.py  data_logger_and_comparator.py  main.py  meta_controller.py
backend/python/src/cli/: __init__.py  commands.py  main.py
backend/python/src/core/: __init__.py  base.py  probability_engine.py  statistics.py
backend/python/src/evaluation/: __init__.py  metrics.py
backend/python/tests/: test_core.py  test_visualizations.py
build_tools/: README.md  applied_probability_framework.spec  applied_probability_framework_gui.spec  build_exe.py  build_gui_exe.bat  build_gui_exe.py  build_mines_game.bat  build_mines_game.py  mines_game.spec
config/: secrets.example.yaml  secrets.yaml.template  settings.yaml
data/: AAPL_1d_2020-01-01_2021-01-01.csv  AAPL_1d_2020-01-01_2024-12-31.csv  NVDA_1d_2020-01-01_2021-01-01.csv  demo_memory.json
docs/: AI_MEMORY_SYSTEM.md  API_REFERENCE.md  IMPROVEMENTS_SUMMARY.md  MATRIX_EVOLUTION_API.md  README.md  README_ENHANCED.md  README_FINAL.md  THEORETICAL_BACKGROUND.md  TUTORIALS.md  implementation_guide.md  math_appendix.md
docs/analysis/: README.md  WIN_RATES.md
docs/evolution/: GUIDE.md  QUICKSTART.md  README.md  SUMMARY.md
docs/guides/: DASHBOARD_README.md  INTEGRATION_GUIDE.md  PROJECT_STRUCTURE.md  README.md  implementation_guide.md  playbook.md  strategy_formulas.md  testing_and_validation.md
docs/operations/: ENSEMBLE_PIPELINE.md  PAPER_TRADING_READY.md  README.md
docs/releases/: README.md  v1.0.0.md  v2.0.0.md
docs/status/: IMPLEMENTATION_SUMMARY.md  README.md  STOCK_AI_BUILD_PLAN.md  STOCK_AI_FRAMEWORK_COMPLETE.md  STOCK_AI_PROGRESS.md  SYSTEM_COMPLETE.md
examples/: README.md  explain_win_rates.py  fast_tournament.py  quick_demo.py  run_mines_benchmark.py  show_champion_text.py  test_tournament.py
examples/demonstrations/: README.md  evolution_demo.py  memory_system_demo.py  show_champion.py
examples/tournaments/: README.md  character_tournament.py  instant_tournament.py  mega_tournament.py  quick_tournament.py  ultimate_tournament.py
frontend/dashboard/: README.md  package.json
python-backend/src/: bankroll_manager.py  main.py  meta_controller.py  robustness_tester.py
python-backend/tests/: test_game_simulator.py
results/: README_results.md  decisions_20251031_220444.csv  decisions_20251031_220747.csv  results_mines_conservative.json  results_mines_random.json  tournament_results_summary.md  training_log_20251031_220444.csv  training_log_20251031_220747.csv
results/tournament_results/: README.md
scripts/: README.md  initialize_ai_memory.py  verify_ai_facts.py
src/components/: GameBoard.jsx
src/python/: PERFORMANCE_OPTIMIZATION_GUIDE.md  ab_testing_framework.py  adaptive_takeshi.py  advanced_probability_estimation.py  adversarial_gan.py  anti_detection_simulator.py  automation_pipeline.py  bankroll_manager.py  bayesian.py  bayesian_adaptive_model.py  bayesian_mines.py  behavioral_probability.py  character_strategies.py  cli.py  data_logger_and_comparator.py  drl_agent.py  drl_environment.py  game_simulator.py  gan_human_simulation.py  gui.py  gui_game.py  integration_test.py  logger.py  main.py  mathematical_core.py  matrix_visualizer.py  meta_controller.py  monte_carlo_tree_search.py  optimized_game_simulator.py  orchestrate_training.py  performance_benchmark.py  performance_profiler.py  real_world_validation.py  register_character_strategies.py  register_plugins.py  requirements.txt  robustness_tester.py  run_deterministic_sim.py  sim_compare.py  strategies.py  (+4 more)
stock_ai/: __init__.py  dashboard.py  dashboard_trading.py  optimizer.py  requirements.txt
stock_ai/agents/: __init__.py  aoi.py  base.py  lelouch.py  senku.py  takeshi.py  technical.py  yuzu.py
stock_ai/api/: __init__.py  alpaca_broker.py  alpaca_interface.py  base_broker.py  broker_clients.py  broker_factory.py  interactive_brokers_interface.py  manual_broker.py
stock_ai/backtests/: backtest_runner.py  batch_runner.py  data_loader.py  plot_reports.py  visualizer.py
stock_ai/execution/: __init__.py  executor.py
stock_ai/governance/: __init__.py  (+1 more)
tests/: __init__.py  test_cli_runs.py  test_dqn_agent_shapes.py  test_ensemble_pipeline.py  test_indicators_ta.py  test_math.py  test_paper_runner_noop.py  test_pnl.py  test_portfolio_env.py  test_strategies_takeshi.py  test_trading_env_rl.py
(+151 files in other folders)
