[metadata]
name = applied-probability-framework
version = 1.0.0
author = Framework Contributors
description = Professional Monte Carlo simulation framework
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
package_dir =
    = src/python
python_requires = >=3.8
install_requires =
    numpy>=1.20.0
    scipy>=1.7.0
    pandas>=1.3.0
    matplotlib>=3.3.0

[options.packages.find]
where = src/python

[options.entry_points]
console_scripts =
    apf = cli:main

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    -v
    --strict-markers
    --tb=short
    --cov=core
    --cov=cli
    --cov-report=term-missing
    --cov-report=html

[coverage:run]
source = core,cli
omit =
    */tests/*
    */test_*

[coverage:report]
precision = 2
show_missing = True
skip_covered = False

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True

[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg

[isort]
profile = black
line_length = 120
multi_line_output = 3
include_trailing_comma = True

[pylint]
max-line-length = 120
disable =
    C0111,  # missing-docstring (we have comprehensive docstrings now)
    R0903,  # too-few-public-methods
    R0913,  # too-many-arguments

